add desktop media queries for footer and different sections

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section class="intro">
     <picture>
-      <source srcset="images/image-intro-desktop22.jpg" media="(min-width: 600px)" />
+      <source srcset="images/image-intro-desktop.jpg" media="(min-width: 600px)" />
       <img class="intro__img" src="images/image-intro-mobile.jpg" alt="">
     </picture>
 
@@ -55,39 +55,41 @@
     </div>
   </section>
   
-
+<div class="container">
   <section class="different">
     <div class="decorative-line different__decorative-line"></div>
     <h2 class="different__heading">We’re different</h2>
 
-    <div class="different__item">
-      <img class="different__item-logo" src="images/icon-snappy-process.svg" alt="">
-      <h3 class="different__item-heading">Snappy Process</h3>
-
-      <p class="different__item-text">
-        Our application process can be completed in minutes, not hours. Don’t get
-        stuck filling in tedious forms.
-      </p>
-    </div>
-
-    <div class="different__item">
-      <img class="different__item-logo" src="images/icon-affordable-prices.svg" alt="">
-      <h3 class="different__item-heading">Affordable Prices</h3>
-
-      <p class="different__item-text">
-        We don’t want you worrying intro high monthly costs. Our prices may be low,
-        but we still offer the best coverage possible.
-      </p>
-    </div>
-
-    <div class="different__item">
-      <img class="different__item-logo" src="images/icon-people-first.svg" alt="">
-      <h3 class="different__item-heading">People First</h3>
-
-      <p class="different__item-text">
-        Our plans aren’t full of conditions and clauses to prevent payouts. We make
-        sure you’re covered when you need it.
-      </p>
+    <div class="different__content">
+      <div class="different__item">
+        <img class="different__item-logo" src="images/icon-snappy-process.svg" alt="">
+        <h3 class="different__item-heading">Snappy Process</h3>
+  
+        <p class="different__item-text">
+          Our application process can be completed in minutes, not hours. Don’t get
+          stuck filling in tedious forms.
+        </p>
+      </div>
+  
+      <div class="different__item">
+        <img class="different__item-logo" src="images/icon-affordable-prices.svg" alt="">
+        <h3 class="different__item-heading">Affordable Prices</h3>
+  
+        <p class="different__item-text">
+          We don’t want you worrying intro high monthly costs. Our prices may be low,
+          but we still offer the best coverage possible.
+        </p>
+      </div>
+  
+      <div class="different__item">
+        <img class="different__item-logo" src="images/icon-people-first.svg" alt="">
+        <h3 class="different__item-heading">People First</h3>
+  
+        <p class="different__item-text">
+          Our plans aren’t full of conditions and clauses to prevent payouts. We make
+          sure you’re covered when you need it.
+        </p>
+      </div>
     </div>
   </section>
 
@@ -103,54 +105,65 @@
       <div>
         <img class="footer__logo" src="images/logo.svg" alt="">
       </div>
-      <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-facebook.svg"
-          alt="facebook profile"></a>
-      <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-twitter.svg"
-          alt="twitter profile"></a>
-      <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-pinterest.svg"
-          alt="pinterest profile"></a>
-      <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-instagram.svg"
-          alt="instagram profile"></a>
+      <div class="footer__icons">
+        <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-facebook.svg"
+            alt="facebook profile"></a>
+        <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-twitter.svg"
+            alt="twitter profile"></a>
+        <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-pinterest.svg"
+            alt="pinterest profile"></a>
+        <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-instagram.svg"
+            alt="instagram profile"></a>
+      </div>
 
-      <div class="decorative-line footer__decorative-line"></div>
     </section>
+    <div class="decorative-line"></div>
 
 
     <section class="footer__links">
-      <h3 class="footer__subheading">Our company</h3>
+      <div>
+        <h3 class="footer__subheading">Our company</h3>
+  
+        <ul class="footer__list">
+          <li class="footer__item"><a class="footer__link" href="">How we work </a></li>
+          <li class="footer__item"><a class="footer__link" href="">Why Insure?</a></li>
+          <li class="footer__item"><a class="footer__link" href="">View plans</a></li>
+          <li class="footer__item"><a class="footer__link" href="">Reviews</a></li>
+        </ul>
+      </div>
 
-      <ul class="footer__list">
-        <li class="footer__item"><a class="footer__link" href="">How we work </a></li>
-        <li class="footer__item"><a class="footer__link" href="">Why Insure?</a></li>
-        <li class="footer__item"><a class="footer__link" href="">View plans</a></li>
-        <li class="footer__item"><a class="footer__link" href="">Reviews</a></li>
-      </ul>
+      <div>
+        <h3 class="footer__subheading">Help me</h3>
+  
+        <ul class="footer__list">
+          <li class="footer__item"><a class="footer__link" href="">FAQ </a></li>
+          <li class="footer__item"><a class="footer__link" href="">Terms of use</a></li>
+          <li class="footer__item"><a class="footer__link" href=""> Privacy policy</a></li>
+          <li class="footer__item"><a class="footer__link" href="">Cookies</a></li>
+        </ul>
+      </div>
 
-      <h3 class="footer__subheading">Help me</h3>
+      <div>
+        <h3 class="footer__subheading">Contact</h3>
+  
+        <ul class="footer__list">
+          <li class="footer__item"><a class="footer__link" href="">Sales</a></li>
+          <li class="footer__item"><a class="footer__link" href="">Support</a></li>
+          <li class="footer__item"><a class="footer__link" href="">Live chat</a></li>
+        </ul>
 
-      <ul class="footer__list">
-        <li class="footer__item"><a class="footer__link" href="">FAQ </a></li>
-        <li class="footer__item"><a class="footer__link" href="">Terms of use</a></li>
-        <li class="footer__item"><a class="footer__link" href=""> Privacy policy</a></li>
-        <li class="footer__item"><a class="footer__link" href="">Cookies</a></li>
-      </ul>
-
-      <h3 class="footer__subheading">Contact</h3>
-
-      <ul class="footer__list">
-        <li class="footer__item"><a class="footer__link" href="">Sales</a></li>
-        <li class="footer__item"><a class="footer__link" href="">Support</a></li>
-        <li class="footer__item"><a class="footer__link" href="">Live chat</a></li>
-      </ul>
-
-      <h3 class="footer__subheading">Others</h3>
-      <ul class="footer__list">
-        <li class="footer__item"><a class="footer__link" href="">Careers</a></li>
-        <li class="footer__item"><a class="footer__link" href="">Press</a></li>
-        <li class="footer__item"><a class="footer__link" href="">Licenses</a></li>
-      </ul>
+      </div>
+      <div>
+        <h3 class="footer__subheading">Others</h3>
+        <ul class="footer__list">
+          <li class="footer__item"><a class="footer__link" href="">Careers</a></li>
+          <li class="footer__item"><a class="footer__link" href="">Press</a></li>
+          <li class="footer__item"><a class="footer__link" href="">Licenses</a></li>
+        </ul>
+      </div>
     </section>
   </footer>
+</div>
 
   <script src="./main.js"></script>
 </body>
