--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
   
 
   <section class="intro">
-    <picture>
-      <source srcset="images/image-intro-desktop.jpg" media="(min-width: 600px)" />
-      <img class="intro__img" src="images/image-intro-mobile.jpg" alt="">
-    </picture>
-
-    <div class="intro__content">
-      <img class="intro__bg-left" src="./images/bg-pattern-intro-left-mobile.svg" alt="">
-      <img class="intro__bg-right" src="./images/bg-pattern-intro-right-mobile.svg" alt="">
-      <h1 class="intro__heading">Humanizing your insurance.</h1>
-
-      <h2 class="intro__subheading">
-        Get your life insurance coverage easier and faster. We blend our expertise
-        and technology to help you find the plan that’s right for you. Ensure you
-        and your loved ones are protected.
-      </h2>
-
-      <a class="intro__link" href="#">View plans</a>
-    </div>
+   <div class="container intro__container">
+      <picture class="intro__picture">
+        <source srcset="images/image-intro-desktop.jpg" media="(min-width: 600px)" />
+        <img class="intro__img" src="images/image-intro-mobile.jpg" alt="">
+      </picture>
+  
+      <div class="intro__content">
+        <h1 class="intro__heading">Humanizing your insurance.</h1>
+  
+        <h2 class="intro__subheading">
+          Get your life insurance coverage easier and faster. We blend our expertise
+          and technology to help you find the plan that’s right for you. Ensure you
+          and your loved ones are protected.
+        </h2>
+  
+        <a class="intro__link" href="#">View plans</a>
+      </div>
+   </div>
   </section>
   
 <div class="container">
@@ -98,9 +98,9 @@
 
     <a class="how__link" href="#">How we work</a>
   </section>
-
+</div>
   <footer class="footer">
-
+    <div class="container">
     <section class="footer__socials">
       <div>
         <img class="footer__logo" src="images/logo.svg" alt="">
