--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 
 <body>
 
-  <header class="header">
-    <img class="header__img" src="images/logo.svg" alt="">
-    <button class="header__btn"><img class="header__btn-icon" src="images/icon-hamburger.svg" alt=""></button>
-    <nav class="header__nav">
-      <ul class="header__list">
-        <li><a href="" class="header__link">How we work</a></li>
-        <li><a href="" class="header__link">Blog</a></li>
-        <li><a href="" class="header__link">Account</a></li>
-        <li><a href="" class="header__link">View plans</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="container">
+    <header class="header">
+      <img class="header__img" src="images/logo.svg" alt="">
+      <button class="header__btn"><img class="header__btn-icon" src="images/icon-hamburger.svg" alt=""></button>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__item"><a href="" class="header__link">How we work</a></li>
+          <li class="header__item"><a href="" class="header__link">Blog</a></li>
+          <li class="header__item"><a href="" class="header__link">Account</a></li>
+          <li class="header__item"><a href="" class="header__link">View plans</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 
   <nav class="mobile-nav">
     <ul class="mobile-nav__list">
@@ -42,6 +44,7 @@
       </picture>
   
       <div class="intro__content">
+        <div class="decorative-line decorative-line--half-width intro__decorative-line"></div>
         <h1 class="intro__heading">Humanizing your insurance.</h1>
   
         <h2 class="intro__subheading">
@@ -57,7 +60,7 @@
   
 <div class="container">
   <section class="different">
-    <div class="decorative-line different__decorative-line"></div>
+    <div class="decorative-line decorative-line--half-width different__decorative-line"></div>
     <h2 class="different__heading">We’re different</h2>
 
     <div class="different__content">
@@ -94,10 +97,10 @@
   </section>
 
   <section class="how">
-    <h2 class="how__heading">Find out more intro how we work</h2>
-
+    <h2 class="how__heading">Find out more about how we work</h2>
     <a class="how__link" href="#">How we work</a>
   </section>
+
 </div>
   <footer class="footer">
     <div class="container">
