add link utility class

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <button class="header__btn"><img class="header__btn-icon" src="images/icon-hamburger.svg" alt=""></button>
       <nav class="header__nav">
         <ul class="header__list">
-          <li class="header__item"><a href="" class="header__link">How we work</a></li>
-          <li class="header__item"><a href="" class="header__link">Blog</a></li>
-          <li class="header__item"><a href="" class="header__link">Account</a></li>
-          <li class="header__item"><a href="" class="header__link">View plans</a></li>
+          <li class="header__item"><a href="" class="header__link link link--gray">How we work</a></li>
+          <li class="header__item"><a href="" class="header__link link link--gray">Blog</a></li>
+          <li class="header__item"><a href="" class="header__link link link--gray">Account</a></li>
+          <li class="header__item"><a href="" class="header__link link link--border-black">View plans</a></li>
         </ul>
       </nav>
     </header>
@@ -53,7 +53,7 @@
           and your loved ones are protected.
         </h2>
   
-        <a class="intro__link" href="#">View plans</a>
+        <a class="intro__link link link--border" href="#">View plans</a>
       </div>
    </div>
   </section>
@@ -98,7 +98,7 @@
 
   <section class="how">
     <h2 class="how__heading">Find out more about how we work</h2>
-    <a class="how__link" href="#">How we work</a>
+    <a class="how__link link link--border" href="#">How we work</a>
   </section>
 
 </div>
@@ -128,10 +128,10 @@
         <h3 class="footer__subheading">Our company</h3>
   
         <ul class="footer__list">
-          <li class="footer__item"><a class="footer__link" href="">How we work </a></li>
-          <li class="footer__item"><a class="footer__link" href="">Why Insure?</a></li>
-          <li class="footer__item"><a class="footer__link" href="">View plans</a></li>
-          <li class="footer__item"><a class="footer__link" href="">Reviews</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">How we work </a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Why Insure?</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">View plans</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Reviews</a></li>
         </ul>
       </div>
 
@@ -139,10 +139,10 @@
         <h3 class="footer__subheading">Help me</h3>
   
         <ul class="footer__list">
-          <li class="footer__item"><a class="footer__link" href="">FAQ </a></li>
-          <li class="footer__item"><a class="footer__link" href="">Terms of use</a></li>
-          <li class="footer__item"><a class="footer__link" href=""> Privacy policy</a></li>
-          <li class="footer__item"><a class="footer__link" href="">Cookies</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">FAQ </a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Terms of use</a></li>
+          <li class="footer__item"><a class="footer__link link" href=""> Privacy policy</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Cookies</a></li>
         </ul>
       </div>
 
@@ -150,18 +150,18 @@
         <h3 class="footer__subheading">Contact</h3>
   
         <ul class="footer__list">
-          <li class="footer__item"><a class="footer__link" href="">Sales</a></li>
-          <li class="footer__item"><a class="footer__link" href="">Support</a></li>
-          <li class="footer__item"><a class="footer__link" href="">Live chat</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Sales</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Support</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Live chat</a></li>
         </ul>
 
       </div>
       <div>
         <h3 class="footer__subheading">Others</h3>
         <ul class="footer__list">
-          <li class="footer__item"><a class="footer__link" href="">Careers</a></li>
-          <li class="footer__item"><a class="footer__link" href="">Press</a></li>
-          <li class="footer__item"><a class="footer__link" href="">Licenses</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Careers</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Press</a></li>
+          <li class="footer__item"><a class="footer__link link" href="">Licenses</a></li>
         </ul>
       </div>
     </section>
