fix mobile menu styling and prevent scrolling when it's opened

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
   <nav class="mobile-nav">
     <ul class="mobile-nav__list">
-      <li class="mobile-nav__item"><a href="" class="mobile-nav__link">How we work</a></li>
-      <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Blog</a></li>
-      <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Account</a></li>
-      <li class="mobile-nav__item"><a href="" class="mobile-nav__link">View plans</a></li>
+      <li class="mobile-nav__item"><a href="" class="mobile-nav__link link link--white">How we work</a></li>
+      <li class="mobile-nav__item"><a href="" class="mobile-nav__link link link--white">Blog</a></li>
+      <li class="mobile-nav__item"><a href="" class="mobile-nav__link link link--white">Account</a></li>
+      <li class="mobile-nav__item"><a href="" class="mobile-nav__link link link--white link--border">View plans</a></li>
     </ul>
   </nav>
 
