replace aria-label with visually hidden span

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <header class="header">
     <div class="container header__container">
       <img class="header__img" src="images/logo.svg" alt="">
-      <button class="header__btn" aria-label="menu" aria-expanded="false"><img class="header__btn-icon" src="images/icon-hamburger.svg"
-          alt=""></button>
+      <button class="header__btn" aria-expanded="false">
+        <img class="header__btn-icon" src="images/icon-hamburger.svg" alt="">
+        <span class="visually-hidden">Menu</span>
+        </button>
       <nav class="header__nav">
         <ul class="header__list">
           <li class="header__item"><a href="" class="header__link link link--gray">How we work</a></li>
