--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
   <footer class="footer">
     <div class="container">
       <section class="footer__socials">
+        <h3 class="visually-hidden">Our socials</h3>
         <div>
           <img class="footer__logo" src="images/logo.svg" alt="">
         </div>
