--- a/index.html
+++ b/index.html
@@ -1,194 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Frontend Mentor | Insure landing page</title>
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Clipboard landing page</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
+</head>
 <body>
 
-  <header class="header">
-    <div class="container header__container">
-      <img class="header__img" src="images/logo.svg" alt="">
-      <button class="header__btn" aria-expanded="false">
-        <img class="header__btn-icon" src="images/icon-hamburger.svg" alt="">
-        <span class="visually-hidden">Menu</span>
-        </button>
-      <nav class="header__nav">
-        <ul class="header__list">
-          <li class="header__item"><a href="" class="header__link link link--gray">How we work</a></li>
-          <li class="header__item"><a href="" class="header__link link link--gray">Blog</a></li>
-          <li class="header__item"><a href="" class="header__link link link--gray">Account</a></li>
-          <li class="header__item"><a href="" class="header__link link link--border-black">View plans</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  A history of everything you copy
 
-  <nav class="mobile-nav">
-    <ul class="mobile-nav__list">
-      <li class="mobile-nav__item"><a href="https://www.google.com/" class="mobile-nav__link link link--white">How we
-          work</a></li>
-      <li class="mobile-nav__item"><a href="https://www.google.com/" class="mobile-nav__link link link--white">Blog</a>
-      </li>
-      <li class="mobile-nav__item"><a href="https://www.google.com/"
-          class="mobile-nav__link link link--white">Account</a></li>
-      <li class="mobile-nav__item"><a href="https://www.google.com/"
-          class="mobile-nav__link link link--white link--border">View plans</a></li>
-    </ul>
-  </nav>
+  Clipboard allows you to track and organize everything you 
+  copy. Instantly access your clipboard on all your devices.
 
+  Download for iOS
+  Download for Mac
 
-  <section class="intro">
-    <div class="container intro__container">
-      <picture class="intro__picture">
-        <source srcset="images/image-intro-desktop.jpg" media="(min-width: 600px)" />
-        <img class="intro__img" src="images/image-intro-mobile.jpg" alt="">
-      </picture>
+  Keep track of your snippets
 
-      <div class="intro__content">
-        <div class="decorative-line decorative-line--half-width intro__decorative-line"></div>
-        <h1 class="intro__heading">Humanizing your insurance.</h1>
+  Clipboard instantly stores any item you copy in the cloud, 
+  meaning you can access your snippets immediately on all your 
+  devices. Our Mac and iOS apps will help you organize everything.
 
-        <h2 class="intro__subheading">
-          Get your life insurance coverage easier and faster. We blend our expertise
-          and technology to help you find the plan that’s right for you. Ensure you
-          and your loved ones are protected.
-        </h2>
+  Quick Search
 
-        <a class="intro__link link link--border" href="#">View plans</a>
-      </div>
-    </div>
-  </section>
+  Easily search your snippets by content, category, web address, application, and more.
 
-  <div class="container">
-    <section class="different">
-      <div class="decorative-line decorative-line--half-width different__decorative-line"></div>
-      <h2 class="different__heading">We’re different</h2>
+  iCloud Sync
 
-      <div class="different__content">
-        <div class="different__item">
-          <img class="different__item-logo" src="images/icon-snappy-process.svg" alt="">
-          <h3 class="different__item-heading">Snappy Process</h3>
+  Instantly saves and syncs snippets across all your devices.
 
-          <p class="different__item-text">
-            Our application process can be completed in minutes, not hours. Don’t get
-            stuck filling in tedious forms.
-          </p>
-        </div>
+  Complete History
 
-        <div class="different__item">
-          <img class="different__item-logo" src="images/icon-affordable-prices.svg" alt="">
-          <h3 class="different__item-heading">Affordable Prices</h3>
+  Retrieve any snippets from the first moment you started using the app.
 
-          <p class="different__item-text">
-            We don’t want you worrying intro high monthly costs. Our prices may be low,
-            but we still offer the best coverage possible.
-          </p>
-        </div>
+  Access Clipboard anywhere
 
-        <div class="different__item">
-          <img class="different__item-logo" src="images/icon-people-first.svg" alt="">
-          <h3 class="different__item-heading">People First</h3>
+  Whether you’re on the go, or at your computer, you can access all your Clipboard 
+  snippets in a few simple clicks.
 
-          <p class="different__item-text">
-            Our plans aren’t full of conditions and clauses to prevent payouts. We make
-            sure you’re covered when you need it.
-          </p>
-        </div>
-      </div>
-    </section>
+  Supercharge your workflow
 
-    <section class="how">
-      <h2 class="how__heading">Find out more about how we work</h2>
-      <a class="how__link link link--border" href="#">How we work</a>
-    </section>
-  </div>
+  We’ve got the tools to boost your productivity.
 
-  <footer class="footer">
-    <div class="container">
-      <section class="footer__socials">
-        <h3 class="visually-hidden">Our socials</h3>
-        <div>
-          <img class="footer__logo" src="images/logo.svg" alt="">
-        </div>
-        <div class="footer__icons">
-          <a class="footer__social-link" aria-label="Facebook profile" href="#">
-            <svg class="footer__social-logo" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-              <path fill="#837D88"
-                d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0z" />
-            </svg></a>
-          <a class="footer__social-link" aria-label="Twitter profile" href="#">
-            <svg class="footer__social-logo" xmlns="http://www.w3.org/2000/svg" width="24" height="20">
-              <path fill="#837D88"
-                d="M24 2.557a9.83 9.83 0 01-2.828.775A4.932 4.932 0 0023.337.608a9.864 9.864 0 01-3.127 1.195A4.916 4.916 0 0016.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 011.671 1.149a4.93 4.93 0 001.523 6.574 4.903 4.903 0 01-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 01-2.224.084 4.928 4.928 0 004.6 3.419A9.9 9.9 0 010 17.54a13.94 13.94 0 007.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0024 2.557z" />
-            </svg></a>
-          <a class="footer__social-link" aria-label="Pinterest profile" href="#">
-            <svg class="footer__social-logo" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-              <path fill="#837D88"
-                d="M12 0C5.373 0 0 5.372 0 12c0 5.084 3.163 9.426 7.627 11.174-.105-.949-.2-2.405.042-3.441.218-.937 1.407-5.965 1.407-5.965s-.359-.719-.359-1.782c0-1.668.967-2.914 2.171-2.914 1.023 0 1.518.769 1.518 1.69 0 1.029-.655 2.568-.994 3.995-.283 1.194.599 2.169 1.777 2.169 2.133 0 3.772-2.249 3.772-5.495 0-2.873-2.064-4.882-5.012-4.882-3.414 0-5.418 2.561-5.418 5.207 0 1.031.397 2.138.893 2.738a.36.36 0 01.083.345l-.333 1.36c-.053.22-.174.267-.402.161-1.499-.698-2.436-2.889-2.436-4.649 0-3.785 2.75-7.262 7.929-7.262 4.163 0 7.398 2.967 7.398 6.931 0 4.136-2.607 7.464-6.227 7.464-1.216 0-2.359-.631-2.75-1.378l-.748 2.853c-.271 1.043-1.002 2.35-1.492 3.146C9.57 23.812 10.763 24 12 24c6.627 0 12-5.373 12-12 0-6.628-5.373-12-12-12z" />
-            </svg></a>
-          <a class="footer__social-link" aria-label="Instagram profile" href="#">
-            <svg class="footer__social-logo" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-              <path fill="#837D88"
-                d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z" />
-            </svg></a>
-        </div>
+  Create blacklists
 
-      </section>
-      <div class="decorative-line"></div>
+  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
 
+  Plain text snippets
 
-      <section class="footer__links">
-        <div>
-          <h3 class="footer__subheading">Our company</h3>
+  Remove unwanted formatting from copied text for a consistent look.
 
-          <ul class="footer__list">
-            <li class="footer__item"><a class="footer__link link" href="">How we work </a></li>
-            <li class="footer__item"><a class="footer__link link" href="">Why Insure?</a></li>
-            <li class="footer__item"><a class="footer__link link" href="">View plans</a></li>
-            <li class="footer__item"><a class="footer__link link" href="">Reviews</a></li>
-          </ul>
-        </div>
+  Sneak preview
 
-        <div>
-          <h3 class="footer__subheading">Help me</h3>
+  Quick preview of all snippets on your Clipboard for easy access.
 
-          <ul class="footer__list">
-            <li class="footer__item"><a class="footer__link link" href="">FAQ </a></li>
-            <li class="footer__item"><a class="footer__link link" href="">Terms of use</a></li>
-            <li class="footer__item"><a class="footer__link link" href=""> Privacy policy</a></li>
-            <li class="footer__item"><a class="footer__link link" href="">Cookies</a></li>
-          </ul>
-        </div>
+  Clipboard for iOS and Mac OS
 
-        <div>
-          <h3 class="footer__subheading">Contact</h3>
+  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+  and you’re ready to start adding to your clipboard.
 
-          <ul class="footer__list">
-            <li class="footer__item"><a class="footer__link link" href="">Sales</a></li>
-            <li class="footer__item"><a class="footer__link link" href="">Support</a></li>
-            <li class="footer__item"><a class="footer__link link" href="">Live chat</a></li>
-          </ul>
+  Download for iOS
+  Download for Mac
 
-        </div>
-        <div>
-          <h3 class="footer__subheading">Others</h3>
-          <ul class="footer__list">
-            <li class="footer__item"><a class="footer__link link" href="">Careers</a></li>
-            <li class="footer__item"><a class="footer__link link" href="">Press</a></li>
-            <li class="footer__item"><a class="footer__link link" href="">Licenses</a></li>
-          </ul>
-        </div>
-      </section>
+  FAQs
+  Contact Us
+  Privacy Policy
+  Press Kit
+  Install Guide
+  
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
   </footer>
-  </div>
-
-  <script src="./main.js"></script>
 </body>
-
 </html>
