--- a/index.html
+++ b/index.html
@@ -16,80 +16,142 @@
       <img src="./images/logo.svg" alt="">
     </div>
     <h1 class="header__heading">A history of everything you copy</h1>
-  
-    <h2 class="header__subheading">
+
+    <p class="header__descr">
       Clipboard allows you to track and organize everything you
       copy. Instantly access your clipboard on all your devices.
-    </h2>
-  
-    <button class="button header__download-ios">Download for iOS</button>
-    <button class="button button--blue header__download-mac">Download for Mac</button>
+    </p>
+
+    <button class="button header__btn">Download for iOS</button>
+    <button class="button button--blue header__btn">Download for Mac</button>
   </header>
 
-<section class="track-snippets">
-    Keep track of your snippets
-  
-    Clipboard instantly stores any item you copy in the cloud,
-    meaning you can access your snippets immediately on all your
-    devices. Our Mac and iOS apps will help you organize everything.
-  
-    Quick Search
-  
-    Easily search your snippets by content, category, web address, application, and more.
-  
-    iCloud Sync
-  
-    Instantly saves and syncs snippets across all your devices.
-  
-    Complete History
-  
-    Retrieve any snippets from the first moment you started using the app.
-</section>
+  <section class="track">
+    <h2 class="track__heading">Keep track of your snippets</h2>
 
-<section class="access-snippets">
-    Access Clipboard anywhere
-  
-    Whether you’re on the go, or at your computer, you can access all your Clipboard
-    snippets in a few simple clicks.
-  
-    Supercharge your workflow
-  
-    We’ve got the tools to boost your productivity.
-  
-    Create blacklists
-  
-    Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-  
-    Plain text snippets
-  
-    Remove unwanted formatting from copied text for a consistent look.
-  
-    Sneak preview
-  
-    Quick preview of all snippets on your Clipboard for easy access.
-</section>
+    <p class="track__descr">
+      Clipboard instantly stores any item you copy in the cloud,
+      meaning you can access your snippets immediately on all your
+      devices. Our Mac and iOS apps will help you organize everything.
+    </p>
 
-<section class="brands">
-  brands
-</section>
+    <div class="track__image">
+      <img class="track__img" src="./images/image-computer.png" alt="">
+    </div>
 
-<section class="download-clipboard">
-    Clipboard for iOS and Mac OS
-  
-    Available for free on the App Store. Download for Mac or iOS, sync with iCloud
-    and you’re ready to start adding to your clipboard.
-  
-    Download for iOS
-    Download for Mac
-</section>
+    <div class="track__feature">
+      <h3 class="track__feature-heading">Quick Search</h3>
 
-<footer class="footer">
-    FAQs
-    Contact Us
-    Privacy Policy
-    Press Kit
-    Install Guide
-</footer>
+      <p class="track__feature-descr">Easily search your snippets by content, category, web address, application, and
+        more.</p>
+    </div>
+
+    <div class="track__feature">
+      <h3 class="track__feature-heading">iCloud Sync</h3>
+
+      <p class="track__feature-descr">Instantly saves and syncs snippets across all your devices.</p>
+    </div>
+
+    <div class="track__feature">
+      <h3 class="track__feature-heading">Complete History</h3>
+
+      <p class="track__feature-descr">Retrieve any snippets from the first moment you started using the app.</p>
+    </div>
+  </section>
+
+  <section class="access">
+    <h2 class="access__heading">Access Clipboard anywhere</h2>
+
+    <p class="access__descr">
+      Whether you’re on the go, or at your computer, you can access all your Clipboard
+      snippets in a few simple clicks.
+    </p>
+
+    <div class="track__image">
+      <img class="track__img" src="./images/image-devices.png" alt="">
+    </div>
+
+  </section>
+
+
+  <section class="tools">
+    <h2 class="tools__heading">Supercharge your workflow</h2>
+
+    <p class="tools__descr">We’ve got the tools to boost your productivity.</p>
+
+    <div class="tools__feature">
+      <h3 class="tools__feature-heading">Create blacklists</h3>
+
+      <p class="tools__feature-descr">Ensure sensitive information never makes its way to your clipboard by excluding
+        certain sources.</p>
+    </div>
+
+    <div class="tools__feature">
+      <h3 class="tools__feature-heading">Plain text snippets</h3>
+
+      <p class="tools__feature-descr">Remove unwanted formatting from copied text for a consistent look.</p>
+    </div>
+
+    <div class="tools__feature">
+      <h3 class="tools__feature-heading">Sneak preview</h3>
+
+      <p class="tools__feature-descr">Quick preview of all snippets on your Clipboard for easy access.</p>
+    </div>
+  </section>
+
+  <section class="brands">
+    <div class="brands__logo">
+      <img class="brands__img" src="./images/logo-google.png" alt="">
+    </div>
+    <div class="brands__logo">
+      <img class="brands__img" src="./images/logo-ibm.png" alt="">
+    </div>
+    <div class="brands__logo">
+      <img class="brands__img" src="./images/logo-microsoft.png" alt="">
+    </div>
+    <div class="brands__logo">
+      <img class="brands__img" src="./images/logo-hp.png" alt="">
+    </div>
+    <div class="brands__logo">
+      <img class="brands__img" src="./images/logo-vector-graphics.png" alt="">
+    </div>
+  </section>
+
+  <section class="download">
+    <h2 class="download__heading">Clipboard for iOS and Mac OS</h2>
+
+    <p class="donwload__descr">
+      Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+      and you’re ready to start adding to your clipboard.
+    </p>
+
+    <button class="download__btn">Download for iOS</button>
+    <button class="download__btn">Download for Mac</button>
+  </section>
+
+  <footer class="footer">
+    <div class="footer__logo">
+      <img class="footer__img" src="./images/logo.svg" alt="">
+    </div>
+
+    <nav class="footer__nav">
+      <ul class="footer__list">
+        <li class="footer__item"><a href="">FAQs</a></li>
+        <li class="footer__item"><a href="">Contact Us</a></li>
+        <li class="footer__item"><a href="">Privacy Policy</a></li>
+        <li class="footer__item"><a href="">Press Kit</a></li>
+        <li class="footer__item"><a href="">Install Guide</a></li>
+      </ul>
+    </nav>
+
+    <section class="footer__socials">
+      <ul class="footer__list-socials">
+        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-facebook.svg" alt=""></a></li>
+        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-twitter.svg" alt=""></a></li>
+        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-instagram.svg" alt=""></a></li>
+      </ul>
+    </section>
+  </footer>
 
 </body>
 
