--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 
     <nav class="footer__nav">
       <ul class="footer__list">
-        <li class="footer__item"><a href="">FAQs</a></li>
-        <li class="footer__item"><a href="">Contact Us</a></li>
-        <li class="footer__item"><a href="">Privacy Policy</a></li>
-        <li class="footer__item"><a href="">Press Kit</a></li>
-        <li class="footer__item"><a href="">Install Guide</a></li>
+        <li class="footer__item"><a class="footer__link" href="">FAQs</a></li>
+        <li class="footer__item"><a class="footer__link" href="">Contact Us</a></li>
+        <li class="footer__item"><a class="footer__link" href="">Privacy Policy</a></li>
+        <li class="footer__item"><a class="footer__link" href="">Press Kit</a></li>
+        <li class="footer__item"><a class="footer__link" href="">Install Guide</a></li>
       </ul>
     </nav>
 
