--- a/index.html
+++ b/index.html
@@ -11,58 +11,66 @@
 
 <body>
 
-  
+
   <header class="header">
-    <div class="header__logo">
-      <img src="./images/logo.svg" alt="">
+    <div class="container container--small">
+      <div class="header__logo">
+        <img src="./images/logo.svg" alt="">
+      </div>
+      <h1 class="header__heading">A history of everything you copy</h1>
+
+      <p class="header__descr">
+        Clipboard allows you to track and organize everything you
+        copy. Instantly access your clipboard on all your devices.
+      </p>
+
+      <button class="button header__btn">Download for iOS</button>
+      <button class="button button--blue header__btn">Download for Mac</button>
     </div>
-    <h1 class="header__heading">A history of everything you copy</h1>
-
-    <p class="header__descr">
-      Clipboard allows you to track and organize everything you
-      copy. Instantly access your clipboard on all your devices.
-    </p>
-
-    <button class="button header__btn">Download for iOS</button>
-    <button class="button button--blue header__btn">Download for Mac</button>
   </header>
 
-  <div class="container">
 
   <section class="track">
-    <h2 class="track__heading">Keep track of your snippets</h2>
+    <div class="container container--small">
+      <h2 class="track__heading">Keep track of your snippets</h2>
 
-    <p class="track__descr">
-      Clipboard instantly stores any item you copy in the cloud,
-      meaning you can access your snippets immediately on all your
-      devices. Our Mac and iOS apps will help you organize everything.
-    </p>
-
-    <div class="track__image">
-      <img class="track__img" src="./images/image-computer.png" alt="">
+      <p class="track__descr">
+        Clipboard instantly stores any item you copy in the cloud,
+        meaning you can access your snippets immediately on all your
+        devices. Our Mac and iOS apps will help you organize everything.
+      </p>
     </div>
 
-    <div class="track__feature">
-      <h3 class="track__feature-heading">Quick Search</h3>
+    <div class="track__columns">
+      <div class="track__image">
+        <img class="track__img" src="./images/image-computer.png" alt="">
+      </div>
 
-      <p class="track__feature-descr">Easily search your snippets by content, category, web address, application, and
-        more.</p>
-    </div>
+      <div class="track__features">
+        <div class="track__feature">
+          <h3 class="track__feature-heading">Quick Search</h3>
 
-    <div class="track__feature">
-      <h3 class="track__feature-heading">iCloud Sync</h3>
+          <p class="track__feature-descr">Easily search your snippets by content, category, web address, application,
+            and
+            more.</p>
+        </div>
 
-      <p class="track__feature-descr">Instantly saves and syncs snippets across all your devices.</p>
-    </div>
+        <div class="track__feature">
+          <h3 class="track__feature-heading">iCloud Sync</h3>
 
-    <div class="track__feature">
-      <h3 class="track__feature-heading">Complete History</h3>
+          <p class="track__feature-descr">Instantly saves and syncs snippets across all your devices.</p>
+        </div>
 
-      <p class="track__feature-descr">Retrieve any snippets from the first moment you started using the app.</p>
+        <div class="track__feature">
+          <h3 class="track__feature-heading">Complete History</h3>
+
+          <p class="track__feature-descr">Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <section class="access">
+  <section class="access container container--small">
     <h2 class="access__heading">Access Clipboard anywhere</h2>
 
     <p class="access__descr">
@@ -77,76 +85,81 @@
   </section>
 
 
-  <section class="tools">
-    <h2 class="tools__heading">Supercharge your workflow</h2>
+  <div class="container">
+    <section class="tools">
+      <h2 class="tools__heading">Supercharge your workflow</h2>
 
-    <p class="tools__descr">We’ve got the tools to boost your productivity.</p>
+      <p class="tools__descr">We’ve got the tools to boost your productivity.</p>
 
-    <div class="tools__feature">
+      <div class="tools__features">
 
-      <div class="tools__feature-icon">
-        <img class="tools__feature-img" src="./images/icon-blacklist.svg" alt="">
+        <div class="tools__feature">
+
+          <div class="tools__feature-icon">
+            <img class="tools__feature-img" src="./images/icon-blacklist.svg" alt="">
+          </div>
+
+          <h3 class="tools__feature-heading">Create blacklists</h3>
+
+          <p class="tools__feature-descr">Ensure sensitive information never makes its way to your clipboard by
+            excluding
+            certain sources.</p>
+        </div>
+
+        <div class="tools__feature">
+
+          <div class="tools__feature-icon">
+            <img class="tools__feature-img" src="./images/icon-text.svg" alt="">
+          </div>
+
+          <h3 class="tools__feature-heading">Plain text snippets</h3>
+
+          <p class="tools__feature-descr">Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+
+        <div class="tools__feature">
+
+          <div class="tools__feature-icon">
+            <img class="tools__feature-img" src="./images/icon-preview.svg" alt="">
+          </div>
+
+          <h3 class="tools__feature-heading">Sneak preview</h3>
+
+          <p class="tools__feature-descr">Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
       </div>
+    </section>
 
-      <h3 class="tools__feature-heading">Create blacklists</h3>
-
-      <p class="tools__feature-descr">Ensure sensitive information never makes its way to your clipboard by excluding
-        certain sources.</p>
-    </div>
-
-    <div class="tools__feature">
-
-      <div class="tools__feature-icon">
-        <img class="tools__feature-img" src="./images/icon-text.svg" alt="">
+    <section class="brands">
+      <div class="brands__logo">
+        <img class="brands__img" src="./images/logo-google.png" alt="">
       </div>
-
-      <h3 class="tools__feature-heading">Plain text snippets</h3>
-
-      <p class="tools__feature-descr">Remove unwanted formatting from copied text for a consistent look.</p>
-    </div>
-
-    <div class="tools__feature">
-
-      <div class="tools__feature-icon">
-        <img class="tools__feature-img" src="./images/icon-preview.svg" alt="">
+      <div class="brands__logo">
+        <img class="brands__img" src="./images/logo-ibm.png" alt="">
       </div>
+      <div class="brands__logo">
+        <img class="brands__img" src="./images/logo-microsoft.png" alt="">
+      </div>
+      <div class="brands__logo">
+        <img class="brands__img" src="./images/logo-hp.png" alt="">
+      </div>
+      <div class="brands__logo">
+        <img class="brands__img" src="./images/logo-vector-graphics.png" alt="">
+      </div>
+    </section>
 
-      <h3 class="tools__feature-heading">Sneak preview</h3>
+    <section class="download">
+      <h2 class="download__heading">Clipboard for iOS and Mac OS</h2>
 
-      <p class="tools__feature-descr">Quick preview of all snippets on your Clipboard for easy access.</p>
-    </div>
-  </section>
+      <p class="download__descr">
+        Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+        and you’re ready to start adding to your clipboard.
+      </p>
 
-  <section class="brands">
-    <div class="brands__logo">
-      <img class="brands__img" src="./images/logo-google.png" alt="">
-    </div>
-    <div class="brands__logo">
-      <img class="brands__img" src="./images/logo-ibm.png" alt="">
-    </div>
-    <div class="brands__logo">
-      <img class="brands__img" src="./images/logo-microsoft.png" alt="">
-    </div>
-    <div class="brands__logo">
-      <img class="brands__img" src="./images/logo-hp.png" alt="">
-    </div>
-    <div class="brands__logo">
-      <img class="brands__img" src="./images/logo-vector-graphics.png" alt="">
-    </div>
-  </section>
-
-  <section class="download">
-    <h2 class="download__heading">Clipboard for iOS and Mac OS</h2>
-
-    <p class="download__descr">
-      Available for free on the App Store. Download for Mac or iOS, sync with iCloud
-      and you’re ready to start adding to your clipboard.
-    </p>
-
-    <button class="button download__btn">Download for iOS</button>
-    <button class="button button--blue download__btn">Download for Mac</button>
-  </section>
-</div>
+      <button class="button download__btn">Download for iOS</button>
+      <button class="button button--blue download__btn">Download for Mac</button>
+    </section>
+  </div>
 
   <footer class="footer">
     <div class="footer__logo">
@@ -165,9 +178,12 @@
 
     <section class="footer__socials">
       <ul class="footer__list-socials">
-        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-facebook.svg" alt=""></a></li>
-        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-twitter.svg" alt=""></a></li>
-        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-instagram.svg" alt=""></a></li>
+        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-facebook.svg"
+              alt=""></a></li>
+        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-twitter.svg"
+              alt=""></a></li>
+        <li class="footer__item-socials"><a class="footer__link-socials" href=""><img src="./images/icon-instagram.svg"
+              alt=""></a></li>
       </ul>
     </section>
   </footer>
