style footer and download sections

--- a/index.html
+++ b/index.html
@@ -147,8 +147,9 @@
         <img class="brands__img" src="./images/logo-vector-graphics.png" alt="">
       </div>
     </section>
+  </div>
 
-    <section class="download">
+    <section class="download container container--small">
       <h2 class="download__heading">Clipboard for iOS and Mac OS</h2>
 
       <p class="download__descr">
@@ -159,7 +160,6 @@
       <button class="button download__btn">Download for iOS</button>
       <button class="button button--blue download__btn">Download for Mac</button>
     </section>
-  </div>
 
   <footer class="footer">
     <div class="footer__logo">
