full styling for the job component

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-  <header class="header">
-
-  </header>
+  <header class="header"></header>
 
   <div class="container">
     <section class="jobs">
@@ -20,27 +18,57 @@
         <div class="job__logo">
           <img class="job__img" src="./images/photosnap.svg" alt="">
         </div>
-        <div class="job__header">
-          <span class="job__company">Photosnap</span>
-          <span class="job__label">New!</span>
-          <span class="job__label job__label--dark">Featured</span>
-        </div>
-        <p class="job__title">Senior Frontend Developer</p>
-        <div class="job__details">
-          <span class="job__detail">1d ago</span>
-          <span class="job__detail">Full Time</span>
-          <span class="job__detail">USA only</span>
-        </div>
+       <div class="job__content">
+          <div class="job__header">
+            <span class="job__company">Photosnap</span>
+            <span class="job__label">New!</span>
+            <span class="job__label job__label--dark">Featured</span>
+          </div>
+          <p class="job__title">Senior Frontend Developer</p>
+          <div class="job__details">
+            <span class="job__detail">1d ago</span>
+            <span class="job__detail">Full Time</span>
+            <span class="job__detail">USA only</span>
+          </div>
+  
+          <hr class="job__dec-line">
+  
+          <div class="job__tags">
+            <span class="job__tag">Frontend</span>
+            <span class="job__tag">Senior</span>
+            <span class="job__tag">HTML</span>
+            <span class="job__tag">CSS</span>
+            <span class="job__tag">JavaScript</span>
+          </div>
+       </div>
+      </article>
 
-        <hr class="job__dec-line">
-
-        <div class="job__tags">
-          <span class="job__tag">Frontend</span>
-          <span class="job__tag">Senior</span>
-          <span class="job__tag">HTML</span>
-          <span class="job__tag">CSS</span>
-          <span class="job__tag">JavaScript</span>
+      <article class="job">
+        <div class="job__logo">
+          <img class="job__img" src="./images/manage.svg" alt="">
         </div>
+       <div class="job__content">
+          <div class="job__header">
+            <span class="job__company">Manage</span>
+            <span class="job__label">New!</span>
+            <span class="job__label job__label--dark">Featured</span>
+          </div>
+          <p class="job__title">Fullstack Developer</p>
+          <div class="job__details">
+            <span class="job__detail">1d ago</span>
+            <span class="job__detail">Part Time</span>
+            <span class="job__detail">Remote</span>
+          </div>
+  
+          <hr class="job__dec-line">
+  
+          <div class="job__tags">
+            <span class="job__tag">Fullstack</span>
+            <span class="job__tag">Midweight</span>
+            <span class="job__tag">Python</span>
+            <span class="job__tag">React</span>
+          </div>
+       </div>
       </article>
 
 
