add max width to layout

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </div>
       <button class="header__clear">Clear</button>
     </section>
+    </div>
   </header>
 
   <div class="container">
@@ -53,7 +54,6 @@
           </div>
 
           <hr class="job__dec-line">
-          <div class="separate"></div>
 
           <div class="job__tags">
             <button class="job__tag">Frontend</button>
@@ -85,7 +85,6 @@
           </div>
 
           <hr class="job__dec-line">
-          <div class="separate"></div>
 
           <div class="job__tags">
             <button class="job__tag">Fullstack</button>
