--- a/index.html
+++ b/index.html
@@ -14,18 +14,10 @@
     <div class="header__bg"></div>
     <section class="header__filters">
       <div class="header__tags">
-        <button class="header__tag">
+        <!-- <button class="header__tag">
           <span class="header__tag-text">Frontend</span>
           <div class="header__icon"><img src="./images/icon-remove.svg" alt=""></div>
-        </button>
-        <button class="header__tag">
-          <span class="header__tag-text">CSS</span>
-          <div class="header__icon"><img src="./images/icon-remove.svg" alt=""></div>
-        </button>
-        <button class="header__tag">
-          <span class="header__tag-text">JavaScript</span>
-          <div class="header__icon"><img src="./images/icon-remove.svg" alt=""></div>
-        </button>
+        </button> -->
       </div>
       <button class="header__clear">Clear</button>
     </section>
